Update personal website links

--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@ result: -17.814</span></code></pre>
 
           <p>ReproZip is currently being developed at <a href="http://engineering.nyu.edu/">NYU</a>. The team includes:</p>
           <ul>
-            <li><a href="http://bigdata.poly.edu/~fchirigati/" rel="noopener">Fernando Chirigati</a></li>
-            <li><a href="http://bigdata.poly.edu/~juliana/" rel="noopener">Juliana Freire</a></li>
-            <li><a href="https://remram.fr/" rel="noopener">R&eacute;mi Rampin</a></li>
+            <li><a href="https://vgc.poly.edu/~fchirigati/" rel="noopener">Fernando Chirigati</a></li>
+            <li><a href="https://vgc.poly.edu/~juliana/" rel="noopener">Juliana Freire</a></li>
+            <li><a href="https://remirampin.com/" rel="noopener">R&eacute;mi Rampin</a></li>
             <li><a href="http://cs.nyu.edu/shasha/" rel="noopener">Dennis Shasha</a></li>
-            <li><a href="http://vickysteeves.com/" rel="noopener">Vicky Steeves</a></li>
+            <li><a href="https://vickysteeves.com/" rel="noopener">Vicky Steeves</a></li>
           </ul>
 
         </div><!--end center content-->
