Adding JOSS publication.

--- a/news.html
+++ b/news.html
@@ -110,6 +110,10 @@ ga('send', 'pageview');
 
       <table style="width: 90%">
         <tr>
+          <td class="date"><b>[Dec 02, 2016]</b></td>
+          <td class="news">Our paper was accepted at JOSS! <a href="http://dx.doi.org/10.21105/joss.00107" target="_blank">Check it out!</a></td>
+        </tr>
+        <tr>
           <td class="date"><b>[Oct 07, 2016]</b></td>
           <td class="news">ReproZip v1.0.8 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.8" target="_blank" rel="noopener">released</a>. Adds a Qt GUI, support for <i>docker-native</i>, file filters, and VirtualBox display.</td>
         </tr>
@@ -272,6 +276,10 @@ ga('send', 'pageview');
       </div>
 
       <h4>2016</h4>
+      
+      <p><i><a href="http://dx.doi.org/10.21105/joss.00107" target="_blank">ReproZip: The Reproducibility Packer</a></i>,
+      R. Rampin, F. Chirigati, D. Shasha, J. Freire, and V. Steeves.
+      In Journal of Open Source Software (JOSS), 2016</p>
 
       <p id="sigmod-demo-2016"><i><a href="http://bigdata.poly.edu/~fchirigati/papers/reprozip-sigmod206.pdf" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
       F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
