--- a/news.html
+++ b/news.html
@@ -65,13 +65,13 @@ ga('send', 'pageview');
               </li>
               <li class="hidden-md hidden-sm"><a href="https://reprozip.readthedocs.io/">Documentation</a></li>
               <li class="hidden-md hidden-sm"><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
-              <li class="hidden-md hidden-sm"><a href="https://vida-nyu.github.io/reprozip-examples/">Examples</a></li>
+              <li class="hidden-md hidden-sm"><a href="https://examples.reprozip.org/">Examples</a></li>
               <li class="dropdown visible-md visible-sm">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">See also<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="https://reprozip.readthedocs.io/">Documentation</a></li>
                   <li><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
-                  <li><a href="https://vida-nyu.github.io/reprozip-examples/">Examples</a></li>
+                  <li><a href="https://examples.reprozip.org/">Examples</a></li>
                 </ul>
               </li>
             </ul>
