--- a/news.html
+++ b/news.html
@@ -93,8 +93,8 @@ ga('send', 'pageview');
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Installers<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.8/reprounzip-1.0.8-setup.exe">Windows</a></li>
-                  <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.8/reprounzip-1.0.8.pkg">Mac OS X</a></li>
+                  <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.9/reprounzip-1.0.9-setup.exe">Windows</a></li>
+                  <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.9/reprounzip-1.0.9.pkg">Mac OS X</a></li>
                   <li><a href="https://anaconda.org/ViDA-NYU" target="_blank" rel="noopener">Anaconda</a></li>
                 </ul>
               </li><!--end dropdown-->
@@ -109,6 +109,10 @@ ga('send', 'pageview');
       </div>
 
       <table style="width: 90%">
+        <tr>
+          <td class="date"><b>[Jan 10, 2017]</b></td>
+          <td class="news">ReproZip v1.0.9 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.9" target="_blank" rel="noopener">released</a>. Fixes some issues with pyc files, non-standard resolv.conf, and files opened in read-write mode.</td>
+        </tr>
         <tr>
           <td class="date"><b>[Dec 02, 2016]</b></td>
           <td class="news">Our paper was accepted at JOSS! <a href="http://dx.doi.org/10.21105/joss.00107" target="_blank">Check it out!</a></td>
