Adding the Brainhack NYC news.

--- a/news.html
+++ b/news.html
@@ -110,6 +110,10 @@ ga('send', 'pageview');
 
       <table style="width: 90%">
         <tr>
+          <td class="date"><b>[Jan 26, 2017]</b></td>
+          <td class="news">ReproZip will be presented at <a href="http://events.brainhack.org/global2017/locations.html#NYC" target="_blank" rel="noopener">Brainhack NYC</a>.</td>
+        </tr>
+        <tr>
           <td class="date"><b>[Jan 10, 2017]</b></td>
           <td class="news">ReproZip v1.0.9 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.9" target="_blank" rel="noopener">released</a>. Fixes some issues with pyc files, non-standard resolv.conf, and files opened in read-write mode.</td>
         </tr>
