Adding the presentation for the Brainhack NYC event.

--- a/news.html
+++ b/news.html
@@ -190,6 +190,13 @@ ga('send', 'pageview');
       <div class="page-header" id="presentations">
           <h2>Presentations</h2>
       </div>
+      
+      <h4>2017</h4>
+      
+      <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/7qmsa/?action=download%26mode=render" target="_blank" rel="noopener">Preserving and Reproducing Research with ReproZip</a></i><br/>
+      <a href="http://events.brainhack.org/global2017/locations.html#NYC" target="_blank">Brainhack NYC</a><br/>
+      Presented by Fernando Chirigati<br/>
+      New York City, NY, March 2017</p>
 
       <h4>2016</h4>
 
