--- a/news.html
+++ b/news.html
@@ -192,6 +192,11 @@ ga('send', 'pageview');
       </div>
       
       <h4>2017</h4>
+
+      <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/hzj5g/?action=download%26mode=render" target="_blank" rel="noopener">ReproZip for Geospatial Research</a></i><br/>
+      <a href="http://egu2017.eu/home.html" target="_blank">European Geosciences Union (EGU) General Assembly</a><br/>
+      Presented by R&eacute;mi Rampin and Vicky Steeves<br/>
+      Vienna, Austria, April 2017</p>
       
       <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/7qmsa/?action=download%26mode=render" target="_blank" rel="noopener">Preserving and Reproducing Research with ReproZip</a></i><br/>
       <a href="http://events.brainhack.org/global2017/locations.html#NYC" target="_blank">Brainhack NYC</a><br/>
