Update contact email to users@reprozip.org

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ result: -17.814</span></code></pre>
             <h3>Feedback</h3>
           </div>
 
-          <p>Contact us at <a href="https://vgc.poly.edu/mailman/listinfo/reprozip-users"><em>reprozip-users@vgc.poly.edu</em></a> for feedback, questions, concerns, and issues. Also, please use this mailing list to <b>share your use cases</b> with us, as well as to report on best practices and lessons learned for reproducibility!</p>
+          <p>Contact us at <a href="https://vgc.poly.edu/mailman/listinfo/reprozip-users"><em>users@reprozip.org</em></a> for feedback, questions, concerns, and issues. Also, please use this mailing list to <b>share your use cases</b> with us, as well as to report on best practices and lessons learned for reproducibility!</p>
 
           <div class="page-header" id="people">
             <h3>People</h3>
