Use S3 to redirect to latest ReproZip release

--- a/news.html
+++ b/news.html
@@ -93,8 +93,8 @@ ga('send', 'pageview');
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Installers<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.9/reprounzip-1.0.9-setup.exe">Windows</a></li>
-                  <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.9/reprounzip-1.0.9.pkg">Mac OS X</a></li>
+                  <li><a href="http://reprozip-files.s3-website-us-east-1.amazonaws.com/windows-installer">Windows</a></li>
+                  <li><a href="http://reprozip-files.s3-website-us-east-1.amazonaws.com/mac-installer">Mac OS X</a></li>
                   <li><a href="https://anaconda.org/ViDA-NYU" target="_blank" rel="noopener">Anaconda</a></li>
                 </ul>
               </li><!--end dropdown-->
