--- a/news.html
+++ b/news.html
@@ -110,6 +110,26 @@ ga('send', 'pageview');
 
       <table style="width: 90%">
         <tr>
+          <td class="date"><b>[Jul 13, 2017]</b></td>
+          <td class="news">ReproZip will be presented at <a href="https://scipy2017.scipy.org" target="_blank" rel="noopener">SciPy 2017</a>.</td>
+        </tr>
+	 <tr>
+          <td class="date"><b>[Jul 10, 2017]</b></td>
+          <td class="news">ReproZip v1.0.10 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.10" target="_blank" rel="noopener">released</a>. Fixes reprozip combine crash on Python 3.6 (patch from James Clarke). New reprozip-jupyter tool to trace and reproduce Jupyter notebooks (can be registered as Jupyter extension for web interface).</td>
+        </tr>
+	<tr>
+          <td class="date"><b>[May 23, 2017]</b></td>
+          <td class="news">ReproZip will be presented at <a href="http://www.iassist2017.org/" target="_blank" rel="noopener">IASSIST 2017</a>.</td>
+        </tr>
+	<tr>
+          <td class="date"><b>[May 1, 2017]</b></td>
+          <td class="news">ReproZip will be presented at <a href="http://presqt.crc.nd.edu/index.php/workshops/workshop-one" target="_blank" rel="noopener">PresQT Workshop One</a>.</td>
+        </tr>
+	<tr>
+          <td class="date"><b>[Apr 24, 2017]</b></td>
+          <td class="news">ReproZip will be presented at <a href="https://www.egu2017.eu/" target="_blank" rel="noopener">the European Geosciences Union Meeting</a>.</td>
+        </tr>
+	<tr>
           <td class="date"><b>[Jan 26, 2017]</b></td>
           <td class="news">ReproZip will be presented at <a href="http://events.brainhack.org/global2017/locations.html#NYC" target="_blank" rel="noopener">Brainhack NYC</a>.</td>
         </tr>
@@ -192,6 +212,21 @@ ga('send', 'pageview');
       </div>
       
       <h4>2017</h4>
+
+      <p><i><a href="https://vickysteeves.gitlab.io/2017-SciPy/#/" target="_blank" rel="noopener">Creating Reproducible Experiments with ReproZip</a></i><br/>
+      <a href="https://scipy2017.scipy.org" target="_blank" rel="noopener">SciPy 2017</a><br/>
+      Presented by Vicky Steeves and R&eacute;mi Rampin<br/>
+      Austin, Texas, July 2017</p>
+
+      <p><i><a href="https://vickysteeves.gitlab.io/2017-IASSIST-ReproZip/#/" target="_blank" rel="noopener">Reproducing and Preserving Research with ReproZip</a></i><br/>
+      <a href="http://www.iassist2017.org/" target="_blank" rel="noopener">IASSIST 2017</a><br/>
+      Presented by Vicky Steeves and R&eacute;mi Rampin<br/>
+      Lawrence, Kansas, May 2017</p>
+
+      <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/z2m5p/?action=download%26mode=render" target="_blank" rel="noopener">ReproZip for Reproducible Research</a></i><br/>
+      <a href="http://presqt.crc.nd.edu/index.php/workshops/workshop-one" target="_blank" rel="noopener">PresQT Workshop One</a><br/>
+      Presented by Vicky Steeves and R&eacute;mi Rampin<br/>
+      University of Notre Dame, May 2017</p>
 
       <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/hzj5g/?action=download%26mode=render" target="_blank" rel="noopener">ReproZip for Geospatial Research</a></i><br/>
       <a href="http://egu2017.eu/home.html" target="_blank">European Geosciences Union (EGU) General Assembly</a><br/>
