Serve Heng's visualization from reprounzip

--- a/reprounzip-vis/reprounzip_vis/static/index.html
+++ b/reprounzip-vis/reprounzip_vis/static/index.html
@@ -193,7 +193,8 @@
 
     /*-- define the current data set for the visualization  --*/
 
-    const currentJsonFile = "bash-count.json";
+    const currentJsonFile = "provenance.json";
+    //const currentJsonFile = "bash-count.json";
     //const currentJsonFile = "stacked-up-website.json";
     //const currentJsonFile = "stacked-up-website_og.json";
     //const currentJsonFile = "ache.json";
