--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@ ga('send', 'pageview');
   </head>
 
   <body>
-    <div class="container" role="main">
+    
+	<img src="img/rz-full-subtitle.png" style="display: block;margin: 0 auto;">
 
       <!-- Fixed navbar -->
       <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
+        <div class="container">
 
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
@@ -50,20 +51,13 @@ ga('send', 'pageview');
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">ReproZip</a>
+             <a class="navbar-brand" href="#">ReproZip</a>
           </div><!--end navbar-header-->
 
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">About</a></li>
-              <li class="dropdown">
-                <a href="news.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">News<span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="news.html#news">What's New</a></li>
-                  <li><a href="news.html#presentations">Presentations</a></li>
-                  <li><a href="news.html#publications">Publications</a></li>
-                  <li><a href="news.html#posters">Posters</a></li>
-                </ul>
+              <li><a href="news.html">News</a></li>
               </li>
               <li class="hidden-md hidden-sm"><a href="https://reprozip.readthedocs.io/">Documentation</a></li>
               <li class="hidden-md hidden-sm"><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
@@ -107,8 +101,11 @@ ga('send', 'pageview');
         </div> <!-- end container-fluid-->
       </nav>
 
+	<div class="container" role="main">
+
       <div class="row">
         <div class="col-sm-9">
+
           <div class="page-header" id="about">
             <h2>Automatically pack your research to be run elsewhere!</h2>
           </div>
