--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@ ga('send', 'pageview');
 
 	<div class="container" role="main">
 
+	<ul class="breadcrumb">
+		  <li><a href="#about">About ReproZip</a></li>
+		  <li><a href="#how">How It Works</a></li>
+		  <li><a href="#why">Why ReproZip?</a></li>
+		  <li><a href="#examples">Examples</a></li>
+		  <li><a href="#citing">Citing ReproZip</a></li>
+		  <li><a href="#contact">Contact the Team</a></li>
+		</ul>
+
       <div class="row">
         <div class="col-sm-9">
 
@@ -186,7 +195,7 @@ result: -17.814</span></code></pre>
           </div>
 
           <div class="page-header" id="citing">
-            <h3>References</h3>
+            <h3>Citing ReproZip</h3>
           </div>
 
           <p>If you wish to cite ReproZip in a paper, please use the following:</p>
@@ -199,24 +208,28 @@ result: -17.814</span></code></pre>
 
           <p>A preprint version is available <a href="http://bigdata.poly.edu/~fchirigati/papers/reprozip-sigmod206.pdf" >here</a>. For a complete list of publications, posters, and presentations, please visit <a href="news.html" rel="noopener">News</a>. To reference our Web site, please use <a href="https://www.reprozip.org/" rel="noopener">https://www.reprozip.org</a>.</p>
 
-          <div class="page-header" id="feedback">
-            <h3>Feedback</h3>
+          <div class="page-header" id="contact">
+            <h3>Contact Us</h3>
           </div>
 
           <p>Contact us at <a href="https://vgc.poly.edu/mailman/listinfo/reprozip-users"><em>users@reprozip.org</em></a> for feedback, questions, concerns, and issues. Also, please use this mailing list to <b>share your use cases</b> with us, as well as to report on best practices and lessons learned for reproducibility!</p>
 
-          <div class="page-header" id="people">
-            <h3>People</h3>
-          </div>
-
           <p>ReproZip is currently being developed at <a href="http://engineering.nyu.edu/">NYU</a>. The team includes:</p>
-          <ul>
-            <li><a href="https://vgc.poly.edu/~fchirigati/" rel="noopener">Fernando Chirigati</a></li>
-            <li><a href="https://vgc.poly.edu/~juliana/" rel="noopener">Juliana Freire</a></li>
-            <li><a href="https://remirampin.com/" rel="noopener">R&eacute;mi Rampin</a></li>
-            <li><a href="http://cs.nyu.edu/shasha/" rel="noopener">Dennis Shasha</a></li>
-            <li><a href="https://vickysteeves.com/" rel="noopener">Vicky Steeves</a></li>
-          </ul>
+
+			<table style="height: 100%; width:100%;">
+			<tbody>
+				<tr>   
+					<td><img src="img/juliana.jpg" alt="Juliana Freire"/><p><a href="http://vgc.poly.edu/~juliana/">Juliana Freire</a></p></td>
+					<td><img src="img/dennis.jpg" alt="Dennis Shasha"/><p><a href="http://www.cs.nyu.edu/shasha/">Dennis Shasha</a></p></td>
+					<td><img src="img/remi.jpg" alt="Remi Rampin"/><p><a href="https://github.com/remram44"> Rémi Rampin</a></p></td>
+				</tr>
+				<tr>   
+					<td><img src="img/fernando.jpg" alt="Fernando Chirigati"/><p><a href="http://vgc.poly.edu/~fchirigati/">Fernando Chirigati</a></p></td>
+					<td><img src="img/vicky.jpg" alt="Vicky Steeves"/><p><a href="https://vickysteeves.com">Vicky Steeves</a></p></td>
+					<td><img src="img/heng.jpg" alt="Heng Li"/><p><a href="https://www.linkedin.com/in/heng2j">Zhonheng Li (summer 2017)</a></p></td>
+				</tr>
+			</tbody>
+			</table>
 
         </div><!--end center content-->
 
