added navbar logo, made btext larger

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@ ga('send', 'pageview');
   </head>
 
   <body>
-    
-	<img src="img/rz-full-subtitle.png" style="display: block;margin: 0 auto;">
-
+ 
       <!-- Fixed navbar -->
       <nav class="navbar navbar-inverse">
         <div class="container">
@@ -51,9 +49,9 @@ ga('send', 'pageview');
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-             <a class="navbar-brand" href="#">ReproZip</a>
+			<a class="navbar-brand" href="#"><img alt="ReproZip" src="img/navbar-logo.png"></a>
           </div><!--end navbar-header-->
-
+			
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">About</a></li>
@@ -107,7 +105,6 @@ ga('send', 'pageview');
         <div class="col-sm-9">
 	
 		<ul class="breadcrumb">
-		  <li><a href="#about">About ReproZip</a></li>
 		  <li><a href="#how">How It Works</a></li>
 		  <li><a href="#why">Why ReproZip?</a></li>
 		  <li><a href="#examples">Examples</a></li>
@@ -167,8 +164,8 @@ $ reprounzip vagrant <span class="s">run</span> mydirectory --cmdline <span clas
 result: -17.814</span></code></pre>
               </div>
             </div>
-
           </div>
+		 <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
 
           <div class="page-header" id="why">
               <h3>Why ReproZip?</h3>
@@ -181,6 +178,7 @@ result: -17.814</span></code></pre>
           <p>For reviewers, even with a compendium in their hands, it may be hard to reproduce the results. There may be no instructions about how to execute the code and explore it further; the experiment may not run on his operating system; there may be missing libraries; library versions may be different; and several issues may arise while trying to install all the required dependencies, a problem colloquially known as <a href="https://en.wikipedia.org/wiki/Dependency_hell" rel="noopener">dependency hell</a>.</p>
 
           <p><a href="https://reprozip.readthedocs.io/">ReproZip</a> helps alleviate these problems by allowing the user to easily capture all the necessary components in a single, distributable package. Also, the tool makes it easier to reproduce an experiment by providing different unpacking methods and interfaces that avoids the need to install all the required dependencies and that makes it possible to run the experiment under different inputs.</p>
+		   <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
 
           <div class="page-header" id="examples">
             <h3>Examples</h3>
@@ -193,6 +191,7 @@ result: -17.814</span></code></pre>
           <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/-zLPuwCHXo0" frameborder="0" allowfullscreen></iframe>
           </div>
+     	 <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
 
           <div class="page-header" id="citing">
             <h3>Citing ReproZip</h3>
@@ -207,6 +206,7 @@ result: -17.814</span></code></pre>
           </div>
 
           <p>A preprint version is available <a href="http://bigdata.poly.edu/~fchirigati/papers/reprozip-sigmod206.pdf" >here</a>. For a complete list of publications, posters, and presentations, please visit <a href="news.html" rel="noopener">News</a>. To reference our Web site, please use <a href="https://www.reprozip.org/" rel="noopener">https://www.reprozip.org</a>.</p>
+		 <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
 
           <div class="page-header" id="contact">
             <h3>Contact Us</h3>
@@ -230,6 +230,7 @@ result: -17.814</span></code></pre>
 				</tr>
 			</tbody>
 			</table>
+ 		    <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
 
         </div><!--end center content-->
 
