--- a/news.html
+++ b/news.html
@@ -40,8 +40,6 @@ ga('send', 'pageview');
 
  <body>
     
-	<img src="img/rz-full-subtitle.png" style="display: block;margin: 0 auto;">
-
       <!-- Fixed navbar -->
       <nav class="navbar navbar-inverse">
         <div class="container">
@@ -53,7 +51,7 @@ ga('send', 'pageview');
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-             <a class="navbar-brand" href="#">ReproZip</a>
+			<a class="navbar-brand" href="#"><img alt="ReproZip" src="img/navbar-logo.png"></a>
           </div><!--end navbar-header-->
 
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
@@ -114,7 +112,6 @@ ga('send', 'pageview');
 
       <div class="page-header" id="news">
         <h2>What's New</h2>
-		<a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
       </div>
 
       <table style="width: 90%">
@@ -215,10 +212,10 @@ ga('send', 'pageview');
           <td class="news">ReproZip is the recommended tool for the <a href="http://db-reproducibility.seas.harvard.edu/" target="_blank" rel="noopener">ACM SIGMOD 2015 Reproducibility Review</a>.</td>
         </tr>
       </table>
+      <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
 
       <div class="page-header" id="presentations">
           <h2>Presentations</h2>
-		  <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
       </div>
       
       <h4>2017</h4>
@@ -335,10 +332,10 @@ ga('send', 'pageview');
       Providence, RI, December 2012
       <br/>
       <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b></p>
+	  <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
 
       <div class="page-header" id="publications">
           <h2>Publications</h2>
-		  <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
       </div>
 
 	  <h4>2017</h4>
@@ -369,10 +366,10 @@ ga('send', 'pageview');
       In Proceedings of the 5th USENIX conference on Theory and Practice of Provenance (TaPP), 2013
       <br/>
       <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b></p>
+	  <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
 
       <div class="page-header" id="posters">
           <h2>Posters</h2>
-		  <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
       </div>
 
       <h4>2016</h4>
@@ -396,6 +393,7 @@ ga('send', 'pageview');
       International Conference on Management of Data (SIGMOD), 2013
       <br/>
       <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b></p>
+ 	  <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
 
     </div> <!-- /container -->
 
