moved breadcrumbs to nav dropdowns

--- a/index.html
+++ b/index.html
@@ -49,14 +49,33 @@ ga('send', 'pageview');
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-			<a class="navbar-brand" href="#"><img alt="ReproZip" src="img/navbar-logo.png"></a>
+			<a class="navbar-brand" href="index.html"><img alt="ReproZip" src="img/navbar-logo.png"></a>
           </div><!--end navbar-header-->
 			
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">About</a></li>
-              <li><a href="news.html">News</a></li>
+
+			  <li class="dropdown active">
+                <a href="news.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="index.html#how">How It Works</a></li>
+                  <li><a href="index.html#why">Why ReproZip?</a></li>
+                  <li><a href="index.html#examples">Examples</a></li>
+                  <li><a href="index.html#citing">Citing ReproZip</a></li>
+				  <li><a href="index.html#contact">Contact the Team</a></li>
+                </ul>
               </li>
+
+			  <li class="dropdown">
+                <a href="news.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">News <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="news.html#news">What's New</a></li>
+                  <li><a href="news.html#presentations">Presentations</a></li>
+                  <li><a href="news.html#publications">Publications</a></li>
+                  <li><a href="news.html#posters">Posters</a></li>
+                </ul>
+              </li>
+
               <li class="hidden-md hidden-sm"><a href="https://reprozip.readthedocs.io/">Documentation</a></li>
               <li class="hidden-md hidden-sm"><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
               <li class="hidden-md hidden-sm"><a href="https://examples.reprozip.org/">Examples</a></li>
@@ -103,15 +122,6 @@ ga('send', 'pageview');
 
       <div class="row">
         <div class="col-sm-9">
-	
-		<ul class="breadcrumb">
-		  <li><a href="#how">How It Works</a></li>
-		  <li><a href="#why">Why ReproZip?</a></li>
-		  <li><a href="#examples">Examples</a></li>
-		  <li><a href="#citing">Citing ReproZip</a></li>
-		  <li><a href="#contact">Contact the Team</a></li>
-		</ul>
-
           <div class="page-header" id="about">
             <h2>Automatically pack your research to be run elsewhere!</h2>
           </div>
