Add reprounzip-qt & reprozip-jupyter to packages

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@ ga('send', 'pageview');
                   <li><a href="https://pypi.python.org/pypi/reprounzip-docker" rel="noopener">reprounzip-docker</a></li>
                   <li><a href="https://pypi.python.org/pypi/reprounzip-vagrant" rel="noopener">reprounzip-vagrant</a></li>
                   <li><a href="https://pypi.python.org/pypi/reprounzip-vistrails" rel="noopener">reprounzip-vistrails</a></li>
+                  <li><a href="https://pypi.python.org/pypi/reprounzip-qt" rel="noopener">reprounzip-qt</a></li>
+                  <li><a href="https://pypi.python.org/pypi/reprozip-jupyter" rel="noopener">reprozip-jupyter</a></li>
                 </ul>
               </li><!--end dropdown-->
 
