--- a/news.html
+++ b/news.html
@@ -71,8 +71,8 @@ ga('send', 'pageview');
                 <a href="news.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">News <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="news.html#news">What's New</a></li>
-                  <li><a href="news.html#presentations">Presentations</a></li>
                   <li><a href="news.html#publications">Publications</a></li>
+		  <li><a href="news.html#presentations">Presentations</a></li>
                   <li><a href="news.html#posters">Posters</a></li>
                 </ul>
               </li>
@@ -125,6 +125,10 @@ ga('send', 'pageview');
       </div>
 
       <table style="width: 90%">
+        <tr>
+          <td class="date"><b>[Nov 6, 2017]</b></td>
+          <td class="news">ReproZip will be presented at <a href="https://sites.google.com/view/msdsesummit/home" target="_blank" rel="noopener">Moore-Sloan Data Science Summit</a>.</td>
+        </tr>
         <tr>
           <td class="date"><b>[Jul 13, 2017]</b></td>
           <td class="news">ReproZip will be presented at <a href="https://scipy2017.scipy.org" target="_blank" rel="noopener">SciPy 2017</a>.</td>
@@ -223,6 +227,40 @@ ga('send', 'pageview');
         </tr>
       </table>
       <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
+
+      <div class="page-header" id="publications">
+          <h2>Publications</h2>
+      </div>
+
+	  <h4>2017</h4>
+	  <p><i><a href="https://dx.doi.org/10.17605/OSF.IO/5TM8D" target="_blank">Using ReproZip for Reproducibility and Library Services</a></i>,
+      V. Steeves, R. Rampin, and F. Chirigati.
+      Pre-print available via the LIS Scholarship Archive (LISSA), 2017</p>
+
+      <h4>2016</h4>
+      
+      <p><i><a href="http://dx.doi.org/10.21105/joss.00107" target="_blank">ReproZip: The Reproducibility Packer</a></i>,
+      R. Rampin, F. Chirigati, D. Shasha, J. Freire, and V. Steeves.
+      In Journal of Open Source Software (JOSS), 2016</p>
+
+      <p id="sigmod-demo-2016"><i><a href="http://bigdata.poly.edu/~fchirigati/papers/reprozip-sigmod206.pdf" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
+      F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
+      In Proceedings of the 2016 ACM SIGMOD International Conference on Management of Data (SIGMOD), pp. 2085-2088, 2016</p>
+
+      <h4>2013</h4>
+
+      <p><i><a href="http://bigdata.poly.edu/~fchirigati/papers/chirigati-sigmod2013.pdf" target="_blank" rel="noopener">Packing Experiments for Sharing and Publication</a></i>,
+      F. Chirigati, D. Shasha, and J. Freire.
+      In Proceedings of the 2013 International Conference on Management of Data (SIGMOD), pp. 977-980, 2013
+      <br/>
+      <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b></p>
+
+      <p><i><a href="http://bigdata.poly.edu/~fchirigati/papers/chirigati-tapp2013.pdf" target="_blank" rel="noopener">ReproZip: Using Provenance to Support Computational Reproducibility</a></i>,
+      F. Chirigati, D. Shasha, and J. Freire.
+      In Proceedings of the 5th USENIX conference on Theory and Practice of Provenance (TaPP), 2013
+      <br/>
+      <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b></p>
+	  <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
 
       <div class="page-header" id="presentations">
           <h2>Presentations</h2>
@@ -344,43 +382,15 @@ ga('send', 'pageview');
       <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b></p>
 	  <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
 
-      <div class="page-header" id="publications">
-          <h2>Publications</h2>
-      </div>
-
-	  <h4>2017</h4>
-	  <p><i><a href="https://dx.doi.org/10.17605/OSF.IO/5TM8D" target="_blank">Using ReproZip for Reproducibility and Library Services</a></i>,
-      V. Steeves, R. Rampin, and F. Chirigati.
-      Pre-print available via the LIS Scholarship Archive (LISSA), 2017</p>
-
-      <h4>2016</h4>
-      
-      <p><i><a href="http://dx.doi.org/10.21105/joss.00107" target="_blank">ReproZip: The Reproducibility Packer</a></i>,
-      R. Rampin, F. Chirigati, D. Shasha, J. Freire, and V. Steeves.
-      In Journal of Open Source Software (JOSS), 2016</p>
-
-      <p id="sigmod-demo-2016"><i><a href="http://bigdata.poly.edu/~fchirigati/papers/reprozip-sigmod206.pdf" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
-      F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
-      In Proceedings of the 2016 ACM SIGMOD International Conference on Management of Data (SIGMOD), pp. 2085-2088, 2016</p>
-
-      <h4>2013</h4>
-
-      <p><i><a href="http://bigdata.poly.edu/~fchirigati/papers/chirigati-sigmod2013.pdf" target="_blank" rel="noopener">Packing Experiments for Sharing and Publication</a></i>,
-      F. Chirigati, D. Shasha, and J. Freire.
-      In Proceedings of the 2013 International Conference on Management of Data (SIGMOD), pp. 977-980, 2013
-      <br/>
-      <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b></p>
-
-      <p><i><a href="http://bigdata.poly.edu/~fchirigati/papers/chirigati-tapp2013.pdf" target="_blank" rel="noopener">ReproZip: Using Provenance to Support Computational Reproducibility</a></i>,
-      F. Chirigati, D. Shasha, and J. Freire.
-      In Proceedings of the 5th USENIX conference on Theory and Practice of Provenance (TaPP), 2013
-      <br/>
-      <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b></p>
-	  <a href="#"> Back to Top <span class="glyphicon glyphicon-arrow-up"></span></a>
-
       <div class="page-header" id="posters">
           <h2>Posters</h2>
       </div>
+
+      <h4>2017</h4>
+
+      <p><i><a href="https://osf.io/2shjg/" target="_blank" rel="noopener">Easily Reproducing Jupyter Notebooks with ReproZip</a></i>,
+      F. Chirigati, R. Rampin, V. Steeves, D. Shasha, and J. Freire.
+      MSDSE Summit, 2017</p>
 
       <h4>2016</h4>
 
